Added Locale support for other languages

--- a/src/res/bundle.properties
+++ b/src/res/bundle.properties
@@ -4,14 +4,39 @@
 no_perms=You do not have permission to do this.
 node_needed=Permission node needed = 
 
-#main commands
+#general
+error=ERROR
 
+#hotspots
+hotspot_name_exists=A hotspot with this name already exists
+htspt=Hotspot '
+htspt_created_success=' was created successfully.
+htspt_deleted=Hotspot deleted successfully.
+htspt_no_name=A hotspot with this name does not exist
+
+#main commands
+invalid_pg_number=Page number must be an integer!
+you_have="You have 
+npc_deleted=NPC deleted successfully.
+npc_not_spawned=This NPC has not spawned.
+
+#version updates
+version=Version 
+run_cmd=Run command 
+new_ver_released= of QuestX has been released, you are running version 
+to_auto_update= to automatically update the plugin if you wish to do so.
+
+#reputation
+rep_gain=You gained 
+rep_loss=You lost 
 
 #conversation
 invalid_index=Invalid option! Select an index. Number only. Eg '1'
 convo_started=Conversation started with NPC 
 convo_ended=Conversation ended.
 speech_options=Speech Options 
+already_talking=You are already talking to this NPC.
+talking_to_other=This NPC is already talking to another player.
 option_unavailable=Unavailable
 invalid_chat_option=Invalid chat option!
 response=Response 
@@ -36,12 +61,44 @@ task_not_enabled=This task is not enabled.
 no_quest=You do not currently have a quest.
 return_npc=, Return to NPC 
 progress=Progress 
+quest_task_complete=Quest task completed!
+quest_cancelled=Quest cancelled, your progress has been saved.
+
+#quest setup
+q_setup_complete=Setup complete!
+q_no_name=A quest by that name does not exist
+setup_successful=Setup successful!
+select_next_spawn=To select the next spawn location
+q_unpack_success=Quest unpacked successfully.
+q_unpack_error=Error while unpacking
+q_to_setup= to setup this quest
+q_setting_up=Setting up quest
+setup_progress=Setup progress (
+q_choose_spawn=Choose spawn location for NPC '
+q_already_setup=Quest has already been setup, no setup file exists.
+q_already_being_setup=You are already setting this quest up!
+q_not_setting_up=You aren't setting up a quest!
+q_currently_being_setup=Someone else is setting up this Quest.
+
+#quest requirements
+need_to_complete_quests=You need to complete the following quests before attempting this one : 
+you_need_between=You need between 
+you_need=You need 
+gold_req= gold to undertake this quest, you only have 
+rep_req= reputation to undertake this quest.
 
 #tasks
 assigned_npc=Assigned NPC '
+task_cancel=Task cancelled!
+collect_items=Collect : 
+talk_to_npc=Talk to 
+kill=Kill : 
+no_task_to_cancel=You do not have a task to cancel.
 completed_return_npc=You have completed your task, return to NPC '
 claim_reward_task= to claim your reward
 no_task_assigned=You do not have a task assigned! To continue or start a task talk to an NPC
+already_has_task=You already have a task, finish or cancel your current task before starting a new one.
+task_desc=Task description : 
 
 #npcs
 no_entityid_match=Could not match entity to NPC
@@ -50,6 +107,9 @@ dropped_items= dropped :
 killed_npc=You killed NPC '
 need_to_see=Sorry, You need to see 
 to_complete_quest_node= to complete this part of the quest
+invalid_gear_data= has invalid data in field 'GEAR'.
+props_file_missing=Could not locate properties file for NPC '
+invalid_invent_data= has invalid data in field 'INVENTORY_DROPS'.
 
 #preset paths
 already_creating_path=You are already creating a path.
@@ -60,3 +120,33 @@ npc_not_loaded_or_exist=This NPC does not exist or has not been loaded.
 no_fixed_spawn=This NPC does not have a fixed spawn.
 already_has_path=This NPC already has a preset path.
 set_points=Set your points by right clicking.
+set_path_point=Path point set successfully.
+no_path_to_point=No path could be found to that point, please select another.
+invalid_selection=Invalid block selected
+end_invalid= end block is not walkable,
+start_invalid= start block is not walkable,
+creation_success=Preset path set successfully.
+
+#files
+no_dlg_file=No dialogue.dlg file found or it is empty!
+error_dlg_parse=There was an error parsing the dialogue file for this NPC. Please check the server log for more information.
+
+#command responses
+all_preset_del=All preset paths for NPCs were deleted
+fixed_spawn_success=Fixed spawn created successfully for NPC '
+was_rem=' was removed.
+t_fs=The fixed spawn for NPC '
+t_pp=The preset path for NPC '
+
+#command errors
+no_npc_name=There is no NPC created with this name!
+no_fixed_spawn=A fixed spawn location for this NPC does not exist
+yes_fixed_spawn=A fixed spawn location for this NPC already exists
+no_preset_path=A preset path for this NPC does not exist
+all_fxied_spawns_del=All fixed spawns for NPCs were deleted
+error_del_fs_file=There was an error deleting the fixed spawns file
+error_del_pp_file=There was an error deleting the preset pathing file
+no_pp_file=The preset pathing file does not exist!
+no_fs_file=The fixed spawns file does not exist!
+fs_file_locked=The fixed spawns file cannot be accessed, it is either missing or being used. Please try again later.
+pp_file_locked=The preset pathing file cannot be accessed, it is either missing or being used. Please try again later.
